feat(web): connect browse and search OPC UA servers
